CF-62: Fix margin overflow on .container

--- a/src/assets/styles/components/_layout.scss
+++ b/src/assets/styles/components/_layout.scss
@@ -1,5 +1,4 @@
 .container {
-  width: 100%;
   display: block;
   margin: $pad;
   padding: $pad;
